[build-system]
requires = [
    "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "vulnhive"
version = "0.66"
authors = [
    { name = "Aenosh Rajora", email = "aenoshrajora79@gmail.com" },
]
description = "30 different vulnhive in one package! (dhcp, dns, elastic, ftp, http proxy, https proxy, http, https, imap, ipp, irc, ldap, memcache, mssql, mysql, ntp, oracle, pjl, pop3, postgres, rdp, redis, sip, smb, smtp, snmp, socks5, ssh, telnet, vnc)"
readme = "README.rst"
# ToDo: fix smtp incompatibility with 3.12
requires-python = ">=3.8"
dependencies = [
    "twisted==24.10.0",
    "psutil==5.9.0",
    "pycryptodome==3.19.1",
    "requests==2.32.0",
    "requests[socks]==2.32.0",
    "impacket==0.9.24",
    "paramiko==3.5.0",
    "scapy",
    "service-identity==21.1.0",
    "netifaces==0.11.0",
]
license = {text = "AGPL-3.0"}

[project.urls]
Homepage = "https://github.com/aenoshrajora/vulnhive"

[project.optional-dependencies]
dev = [
    "dnspython==2.4.2",
    "elasticsearch",
    "ldap3",
    "mysql-connector",
    "pre-commit",
    "pymssql",
    "pytest",
    "pytest-xdist==3.5.0",
    "redis",
    "vncdotool",
]

[project.scripts]
vulnhive = "vulnhive.__main__:main_logic"

[tool.setuptools]
packages = [
    "vulnhive",
    "vulnhive.data",
]
include-package-data = true

[tool.setuptools.package-data]
"vulnhive.data" = [
    "*.html",
]

[tool.ruff]
select = [
    "F",
    "E",
    "W",
    "C90",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "EXE",
    "FA",
    "ISC",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RET",
    "SIM",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "PLR",
    "PLW",
    "PERF",
    "RUF",
]
ignore = [
    "A003",
    "PERF203",
    "PERF401",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF015",
    "T201",
    # pydantic only supports these from python>=3.9
    "UP006",
    "UP007",
    # rules may cause conflicts when used with the formatter
    "ISC001",
    "Q001",
]
fixable = [
    "F",
    "E",
    "W",
    "C90",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "EXE",
    "FA",
    "ISC",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RET",
    "SIM",
    "TCH",
    "ARG",
    "PTH",
    "ERA",
    "PL",
    "PLR",
    "PLW",
    "PERF",
    "RUF",
]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "data",
]
line-length = 99
target-version = "py38"

[tool.ruff.lint.per-file-ignores]
# don't check for "magic value" in tests
"tests/*" = ["PLR2004"]
